# mpi

./: CMakeLists.txt  fifth_task.cpp  first_task.cpp  fourth_task.cpp  second_task.cpp  t13.cpp  t14.cpp  t14r.cpp  t16.cpp  t17.cpp  t18.cpp  t19.cpp  t20.cpp  t21.cpp  t22.cpp  task_eight.cpp  task_eleven.cpp  task_fourteen.cpp  task_nine.cpp  task_seven.cpp  task_seven_leibnitz.cpp  task_six.cpp  task_ten.cpp  task_thirteen.cpp  task_thirteen_remake.cpp  task_twelve.cpp  taskteninitial.cpp  test.cpp  test_mpi.cpp  third_task.cpp  zaeb.cpp
chat/: client.cpp  client_with_ranks.cpp  server.cpp  server_with_ranks.cpp  test_client.cpp  test_server.cpp
chat_openmp/: client.cpp  server.cpp
cows_and_bulls/: client.cpp  server.cpp
t23/: master.cpp  slave.cpp
t24/: client.cpp  server.cpp
test/: client.cpp  server.cpp
