cmake_minimum_required(VERSION 3.19)
project(Programming3)

set(CMAKE_CXX_STANDARD 14)

add_executable(Programming3 first_task.cpp second_task.cpp third_task.cpp fourth_task.cpp fifth_task.cpp task_six.cpp task_seven.cpp task_seven_leibnitz.cpp task_eight.cpp task_nine.cpp test_mpi.cpp task_ten.cpp task_eleven.cpp task_twelve.cpp taskteninitial.cpp task_thirteen.cpp task_fourteen.cpp test.cpp task_thirteen_remake.cpp t13.cpp t14.cpp t14r.cpp zaeb.cpp t16.cpp t17.cpp t18.cpp t19.cpp t20.cpp t21.cpp t22.cpp t23/slave.cpp t23/master.cpp t24/server.cpp t24/client.cpp chat/client.cpp chat/server.cpp chat/test_client.cpp chat/test_server.cpp chat/client_with_ranks.cpp chat/server_with_ranks.cpp test/server.cpp test/client.cpp chat_openmp/client.cpp chat_openmp/server.cpp cows_and_bulls/server.cpp cows_and_bulls/client.cpp cows_and_bulls/test.cpp)